k8s/application/ingresses/aws/ingress-symfony.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-ingress
  namespace: symfony-ns
  annotations:
    # ALB Ingress Controller annotations
    alb.ingress.kubernetes.io/load-balancer-name: "symfony-alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    
    # Health check
    # TODO
    # alb.ingress.kubernetes.io/healthcheck-path: /
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: "10"
    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    # alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    # alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    
    # Sticky sessions - Via target group attributes
    # TODO
    # alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=lb_cookie,stickiness.lb_cookie.duration_seconds=86400
    
    # Tags para AWS
    alb.ingress.kubernetes.io/tags: "Environment=test,Project=pf-devops"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
